--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,29 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+# Install Node.js
+- task: NodeTool@0
+  inputs:
+    versionSpec: '16.x'
+  displayName: 'Install Node.js'
 
+# Install dependencies
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    npm install -g @angular/cli
+    npm install
+  displayName: 'Install Dependencies'
+
+# Lint the Angular project
+- script: |
+    ng lint
+  displayName: 'Lint Angular Project'
+
+# Build the Angular project
+- script: |
+    ng build --prod
+  displayName: 'Build Angular Project'
+
