--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,26 +4,19 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+variables:
+  buildConfiguration : 'production' 
+
 steps:
-# Install Node.js
-- task: NodeTool@0
-  inputs:
-    versionSpec: '16.x'
-  displayName: 'Install Node.js'
-
-# Install dependencies
 - script: |
-    npm install -g @angular/cli
     npm install
-  displayName: 'Install Dependencies'
+    npm run build
+  displayName: 'Install Dependencies and Build'
 
-# Lint the Angular project
-- script: |
-    ng lint
-  displayName: 'Lint Angular Project'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.SourcesDirectory)/dist'
+    ArtifactName: 'golaphazarika-app'
+  displayName: 'Publish Build Artifacts'
 
-# Build the Angular project
-- script: |
-    ng build --prod
-  displayName: 'Build Angular Project'
 
